--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -2,6 +2,8 @@
 You do not need to worry about .error {} colliding with any other `.css` or
 `.module.css` files!
 */
+@import url("https://use.fontawesome.com/releases/v5.11.1/css/all.css");
+
 .color {
     background-color: #4d6954;
   }
